# scicore

./: LICENSE.MD  README.MD  build.gradle.kts  settings.gradle.kts
.github/workflows/: gradle-macos.yml  gradle-ubuntu.yml  gradle-windows.yml  gradle.yml
core/: build.gradle.kts
core/src/main/java/me/mikex86/scicore/: AbstractTensor.java  DataType.java  DefaultTensorIterator.java  IDerivedTensor.java  ISciCore.java  ITensor.java  ITensorIterator.java  LazyTensor.java  SciCore.java  View.java
core/src/main/java/me/mikex86/scicore/backend/: AbstractSciCoreBackend.java  ISciCoreBackend.java  OperationRegistry.java
core/src/main/java/me/mikex86/scicore/data/: DatasetIterator.java
core/src/main/java/me/mikex86/scicore/graph/: Graph.java  GraphExecutor.java  GraphRecorder.java  IGraph.java  IGraphRecorder.java  OperationType.java  OptionBundle.java
core/src/main/java/me/mikex86/scicore/graphviz/: DAGGraphRenderPlanFactory.java
core/src/main/java/me/mikex86/scicore/memory/: AbstractMemoryManager.java  DirectMemoryHandle.java  DirectMemoryManager.java  IMemoryHandle.java  IMemoryManager.java  MemoryHandleFinalizer.java  MemoryHandleGuard.java
core/src/main/java/me/mikex86/scicore/nativelib/: LibraryLoader.java
core/src/main/java/me/mikex86/scicore/nn/: IModule.java
core/src/main/java/me/mikex86/scicore/op/: Graph.java  GraphRecorder.java  IBinaryOperation.java  IDerivedTensor.java  IDifferentiableBiParametricOperation.java  IDifferentiableBinaryOperation.java  IDifferentiableOperation.java  IDifferentiableSingleParametricOperation.java  IDifferentiableUnaryOperation.java  IGraph.java  IGraphRecorder.java  IOperation.java  ISingleParametricOperation.java  ITrinaryOperation.java  IUnaryOperation.java  OperationType.java  OptionBundle.java  ParameterBundle.java
core/src/main/protobuf/onnx/: onnx-data.proto  onnx-operators.proto
core/src/test/java/: Test.java
core/src/test/java/me/mikex86/scicore/: ApproxLinearFuncTrainingTest.java  ApproxNonlinearFuncTrainingTest.java  GraphRecordingTest.java  ITensorTest.java  JvmMatmulPerformanceTest.java  MNISTTest.java  PerformanceTest.java
cuda-backend/: build.gradle.kts
cuda-backend/src/main/cuda/: cast.cu  fill_triangle.cu  less_than.cu  matmul.cu  multiply.cu  stdint.cuh  stdkernel.cuh
cuda-backend/src/main/resources/: log4j2.xml
genericcpu-backend/: build.gradle.kts
genericcpu-backend/cmake/: CMakeLists.txt
genericcpu-backend/cmake/src/: ArgmaxJNI.cpp  ArgmaxJNI.h  DivideJNI.cpp  DivideJNI.h  ExpJNI.cpp  ExpJNI.h  LogJNI.cpp  LogJNI.h  MatmulJNI.cpp  MatmulJNI.h  MinusJNI.cpp  MinusJNI.h  MultiplyJNI.cpp  MultiplyJNI.h  PlusJNI.cpp  PlusJNI.h  PowJNI.cpp  PowJNI.h  ReduceSumJNI.cpp  ReduceSumJNI.h  ReluJNI.cpp  ReluJNI.h  SigmoidJNI.cpp  SigmoidJNI.h  TanhJNI.cpp  TanhJNI.h  jnidatatypes.h  jnihelper.h  matmul.cpp  matmul.h
genericcpu-backend/cmake/tinyblas/: CMakeLists.txt
genericcpu-backend/cmake/tinyblas/include/: argmax.h  divide.h  exp.h  foralldatatypes.h  foralltypes.h  log.h  matmul.h  minus.h  multiply.h  plus.h  pow.h  reducesum.h  relu.h  sigmoid.h  tanh.h  tensormul.h  tinyblas.h
genericcpu-backend/cmake/tinyblas/libraries/neon_mathfun/: CMakeLists.txt
genericcpu-backend/cmake/tinyblas/libraries/neon_mathfun/include/: neon_mathfun.h
genericcpu-backend/cmake/tinyblas/libraries/neon_mathfun/src/: neon_mathfun.cpp
genericcpu-backend/cmake/tinyblas/src/: argmax.cpp  divide.cpp  exp.cpp  forceinline.h  log.cpp  matmul.cpp  minus.cpp  mul.cpp  multiply.cpp  optimize.h  plus.cpp  pow.cpp  reducesum.cpp  relu.cpp  shapeutils.h  sigmoid.cpp  tanh.cpp  tensormul.cpp  vectorize_armneon.h  vectorize_avx.h
matplotlib/: build.gradle.kts
matplotlib/src/main/java/me/mikex86/graphviz/: GraphRenderPlan.java  GraphVisualizer.java
src/main/java/me/mikex86/scicore/: AbstractTensor.java  DataType.java  DefaultTensorIterator.java  IScalar.java  ISciCore.java  ITensor.java  ITensorIterator.java  IValue.java  LazyTensor.java  Scalar.java  SciCore.java  Tensor.java  View.java
src/main/java/me/mikex86/scicore/backend/: AbstractSciCoreBackend.java  ISciCoreBackend.java  ITensorImpl.java  ScalarImpl.java  SciCoreBackend.java  TensorImpl.java
src/main/java/me/mikex86/scicore/data/: DatasetIterator.java
src/main/java/me/mikex86/scicore/graphviz/: DAGGraphRenderPlanFactory.java  GraphRenderPlan.java  GraphVisualizer.java
src/main/java/me/mikex86/scicore/nn/: IModule.java  Module.java
src/main/java/me/mikex86/scicore/op/: Graph.java  GraphRecorder.java  IBiParametricOperation.java  IBinaryOperation.java  IDerivedTensor.java  IDifferentiableBiParametricOperation.java  IDifferentiableBinaryOperation.java  IDifferentiableUnaryOperation.java  IGraph.java  IGraphRecorder.java  IOperation.java  IParametricOperation.java  ITrinaryOperation.java  IUnaryOperation.java  OperationType.java
src/main/java/me/mikex86/scicore/utils/: ArrayUtils.java  OptionalUtils.java  Pair.java  ShapeUtils.java  Validator.java
src/test/java/: Test.java
src/test/java/me/mikex86/scicore/: ApproxLinearFuncTrainingTest.java  ApproxNonlinearFuncTrainingTest.java  GradientComputationTest.java  GraphRecordingTest.java  ITensorTest.java  MNISTTest.java
src/test/java/me/mikex86/scicore/graphviz/: GraphVisualizerTest.java
src/test/java/me/mikex86/scicore/utils/: ArrayUtilsTest.java  ShapeUtilsTest.java  StringUtilsTest.java
tests/: build.gradle.kts
tests/pytorch/: javarandom.py  makemore_mlp_pytorch.py  makemore_pytorch.py  makemore_rnn_pytorch.py  mnist.py  mnist_keras.py  mnist_pytorch.py
thesis/: neural_network.ai  strides_visualization.ai  thesis.md
thesis/figures/: broadcasting_scalar_stretch.ai  upstream-local-gradient.ai
thesis/logo/: logo.ai  logo.blend  logo.blend1  logo_text.ai  logo_with_text.ai  svg_good_geometry.ai
(+252 files in other folders)
